# smolgrad-rs

./: .gitignore  Cargo.toml  test_handle.rs
benches/: binary_kernels.rs
docs/backend/: buffer.md  executor.md
latex/: synopsis.tex
src/: main.rs
src/core/backend/: buffer.rs  mod.rs
src/core/backend/buffer/: backend.rs  buffer.rs  dynamic.rs  id.rs  kernels.rs  mod.rs  pool.rs  storage.rs  view.rs
src/core/backend/executor/: cache.rs  dispatcher.rs  error.rs  graph.rs  mod.rs  ops.rs
src/core/backend/executor/fusion/: ir.rs  jit.rs  mod.rs
src/core/backend/kernels/: binary.rs  unary.rs
tests/: buffer_tests.rs  executor_tests.rs
