[package]
name = "smolgrad-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
cubecl = { version = "0.9.0", features = ["std", "stdlib"] }
pollster = "0.4"
rustc-hash = "2.1"
log = "0.4"

[dev-dependencies]
criterion = "0.6"
rand = "0.8"
serial_test = "3.0"

[[bench]]
name = "binary_kernels"
harness = false

[features]
default = ["wgpu"]
wgpu = ["cubecl/wgpu"]
cuda = ["cubecl/cuda"]
cpu = ["cubecl/cpu"]
hip = ["cubecl/hip"]
vulkan = ["cubecl/wgpu-spirv"]
metal = ["cubecl/wgpu-msl"]


